Clean code (#28)
* [feature]VLD-24: PART 1 update expected response

* [feature]VLD-24: PART 2 send jira ticket

* [feature]CLEAN CODE: refactor code (sonarQube)

* [feature]CLEAN CODE:resolved conflits and  refactor code (sonarQube)