@@ -13,21 +13,20 @@ import org.springframework.web.bind.annotation.ExceptionHandler;
 
 import java.util.List;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 @ControllerAdvice
 public class ExceptionHandlerRestController {
 
-    private final Function<String, ResponseEntity<Object>> HANDLE_EXCEPTION = message -> new ResponseEntity<>(new ExceptionMessageDto(message), HttpStatus.BAD_REQUEST);
+    private final Function<String, ResponseEntity<Object>> handleException = message -> new ResponseEntity<>(new ExceptionMessageDto(message), HttpStatus.BAD_REQUEST);
 
     @ExceptionHandler(value = {ProjectException.class})
     public ResponseEntity<Object> handleProjectException(ProjectException e) {
-        return HANDLE_EXCEPTION.apply(e.getMessage());
+        return handleException.apply(e.getMessage());
     }
 
     @ExceptionHandler(value = {OperationException.class})
     public ResponseEntity<Object> handleOperationException(OperationException operationException) {
-        return HANDLE_EXCEPTION.apply(operationException.getMessage());
+        return handleException.apply(operationException.getMessage());
     }
 
     @ExceptionHandler(MethodArgumentNotValidException.class)
@@ -36,7 +35,7 @@ public class ExceptionHandlerRestController {
         List<String> errors = bindingResult.getAllErrors()
                 .stream()
                 .map(DefaultMessageSourceResolvable::getDefaultMessage)
-                .collect(Collectors.toList());
+                .toList();
         return new ResponseEntity<>(new ExceptionMessageDto(String.join(", ", errors)), HttpStatus.BAD_REQUEST);
     }
 
